# axsdk-rs

./: Cargo.toml  win32_stuff.txt
axsdk/: Cargo.toml
axsdk-examples/: Cargo.toml
axsdk-examples/examples/: main.rs
axsdk-rs/: Cargo.toml
axsdk/examples/: create_window.rs
axsdk/src/: lib.rs
axsdk/src/foundation/: axplatform.rs  axtypes.rs
axsdk/src/plugins/: axwindow.rs
axsdk/src/plugins/axwindow/: axwindow.rs  mod.rs
src/: lib.rs
src/foundation/: axmath.rs  axtypes.rs  mod.rs
tests/: integration_tests.rs
