[package]
name = "axsdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
assert_fs = "1.0.13"
bitflags = "2.4.1"
predicates = "3.0.4"
test-case = "3.3.1"
widestring = "1.0.2"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs"
]
